--- a/lotgd/templates/avalon.htm
+++ b/lotgd/templates/avalon.htm
@@ -14,7 +14,7 @@
 <!--!popupfoot-->
 	</div>
 	<div id="page_foot">
-		<div id="attr">{copyright}Anzeige-Design von Demonmegi</div>
+		<div id="attr">{copyright}Design by Demonmegi</div>
 	</div>
 </body>
 </html>
@@ -51,7 +51,7 @@
 		</div>
 	</div>
 	<div id="page_foot">
-		<div id="attr">{copyright}Anzeige-Design von Demonmegi ({pagegen})</div>
+		<div id="attr">{copyright}Design by Demonmegi ({pagegen})</div>
 		<div id="src_ver"><p>{source}</p><p>{version}</p></div>
 	</div>
 </body>
